# spco_mapping

./: CMakeLists.txt  README.md  package.xml
data/DATASET/: dataset.txt
launch/: amcl.launch  colormap.launch
map/map_sigverse/: map.txt
src/: __init__.py  colormap_saver.cpp  learning.py  spco_mapping.sh
